--- a/package.yaml
+++ b/package.yaml
@@ -33,7 +33,7 @@ dependencies:
 - ed25519
 - exceptions
 - hexstring
-- network
+- network >= 3.1.1.0
 - network-attoparsec
 - network-simple
 - socks
